JumpScript/tests/baselines/reference/parserAccessibilityAfterStatic10.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/AccessibilityAfterStatic/parserAccessibilityAfterStatic10.jump(3,8): error TS1029: 'public' modifier must precede 'static' modifier.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/AccessibilityAfterStatic/parserAccessibilityAfterStatic10.jump (1 errors) ====
    class Outer
    {
    static public intI<T>() {}
           ~~~~~~
!!! error TS1029: 'public' modifier must precede 'static' modifier.
    }
    